--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
 
 <script>
   document.getElementById('yy').textContent = new Date().getFullYear();
-  const WATCH_URL = 'https://rileymarker.com/sportlo';
+  const WATCH_URL = '/watch.html';
   const OPEN_IN_NEW_TAB = true;
 
   const fmtTime = d => new Date(d).toLocaleTimeString([], {hour:'2-digit', minute:'2-digit', hour12:false});
@@ -295,7 +295,9 @@
     // Persist the sport on the dataset for sport‑specific fallback logic in updateCard
     a.dataset.sport = fx.sport || '';
     var s = slug((fx.home.name || '') + '-vs-' + (fx.away.name || ''));
-    var watchHref = WATCH_URL + (WATCH_URL.indexOf('?') === -1 ? '?m=' : '&m=') + encodeURIComponent(s);
+var fixtureId = fx.id || fx.uid || fx.eventId || fx.esId || '';
+var originalStream = (typeof buildRileyUrl === 'function') ? buildRileyUrl(fx) : (('https://rileymarker.com/sportlo' + (('https://rileymarker.com/sportlo'.indexOf('?')===-1?'?m=':'&m=')) + encodeURIComponent(s)));
+var watchHref = WATCH_URL + '?id=' + encodeURIComponent(fixtureId) + (originalStream ? '&src=' + encodeURIComponent(originalStream) : '');
     // Build the inner HTML of the card.  We include a favourite toggle (★) in the head
     // so users can mark games they care about.  The slug is stored on the dataset
     // for toggle handling.
