--- a/public/watch.html
+++ b/public/watch.html
@@ -8,21 +8,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles.css?v=21" />
+  <link rel="stylesheet" href="/styles.css?v=22" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
-    .mc-wrap{max-width:1100px;margin:0 auto;padding:16px}
-    .mc-header{display:flex;align-items:center;gap:16px;margin-bottom:12px}
-    .mc-logos{display:flex;align-items:center;gap:16px}
-    .mc-logos img{width:56px;height:56px;object-fit:contain}
-    .h1{font-size:28px;font-weight:800}
+    .wrap{max-width:1100px;margin:0 auto;padding:16px}
+    .headerbar{display:flex;align-items:center;justify-content:space-between;margin-bottom:10px}
+    .badge{display:inline-block;border:1px solid #2a2f37;border-radius:999px;padding:4px 10px;font-size:12px}
+    .teams{display:grid;grid-template-columns:1fr auto 1fr;gap:12px;align-items:center;margin:8px 0 4px}
+    .side{display:flex;align-items:center;gap:10px;justify-content:flex-start}
+    .side.right{justify-content:flex-end;flex-direction:row-reverse}
+    .side img{width:56px;height:56px;object-fit:contain}
+    .h1{font-size:28px;font-weight:800;text-align:center}
     .muted{opacity:.7}
-    .grid2{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;margin-top:8px}
-    .player{width:100%;aspect-ratio:16/9;background:#000;border-radius:12px;overflow:hidden;margin:18px 0}
-    .player iframe,.player video{width:100%;height:100%;border:0;display:block}
-    .badgelike{display:inline-block;border:1px solid #2a2f37;border-radius:999px;padding:4px 10px;font-size:12px}
-    .topbar{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
-    .back{color:#9ab; text-decoration:none}
+    .meta{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;margin:14px 0}
+    .player{width:100%;aspect-ratio:16/9;background:#000;border-radius:12px;overflow:hidden;margin:18px 0;display:flex;align-items:center;justify-content:center}
+    .btn{display:inline-flex;align-items:center;gap:8px;border:1px solid #2a2f37;border-radius:10px;padding:10px 14px;text-decoration:none;color:#cbd5e1}
+    .btn:hover{background:#121821}
   </style>
 </head>
 <body>
@@ -33,57 +34,58 @@
   </div>
 </header>
 
-<main class="mc-wrap">
-  <div class="topbar">
-    <a class="back" href="/" aria-label="Back to schedule">← Back to schedule</a>
-    <span class="badgelike" id="compBadge"></span>
+<main class="wrap">
+  <div class="headerbar">
+    <a class="btn" href="/" aria-label="Back to schedule">← Back</a>
+    <span id="leagueBadge" class="badge"></span>
   </div>
 
-  <div id="matchHeader" class="mc-header"></div>
-  <div id="meta" class="grid2"></div>
+  <div class="teams">
+    <div class="side left"><img id="homeLogo" alt="" /><span id="homeName"></span></div>
+    <div class="h1" id="versus">vs</div>
+    <div class="side right"><img id="awayLogo" alt="" /><span id="awayName"></span></div>
+  </div>
+  <div class="muted" id="statusLine" style="text-align:center"></div>
 
-  <section class="player" id="player"></section>
-  <section id="fallbackMsg" class="muted" style="display:none">
-    No stream source was provided. Open this page from the schedule or add one to the URL like:
-    <code>?id=12345&amp;src=https%3A%2F%2Fexample.com%2Fstream.m3u8</code>
+  <div class="meta">
+    <div><span class="muted small">Kickoff</span><div id="kickoff">-</div></div>
+    <div><span class="muted small">Competition</span><div id="league">-</div></div>
+    <div><span class="muted small">Status</span><div id="state">-</div></div>
+  </div>
+
+  <section class="player" id="player">
+    <div class="muted">No stream connected. Add one later — this page is dedicated to the match data.</div>
   </section>
+
+  <div id="extLinkWrap" style="display:none;text-align:center">
+    <a id="extLink" class="btn" target="_blank" rel="noopener">Open external stream ↗</a>
+  </div>
 </main>
 
 <script>
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
-  function isVideoUrl(u){ return /\.m3u8($|\?)/i.test(u) || /\.mp4($|\?)/i.test(u) || /\.webm($|\?)/i.test(u); }
+  function set(el, val){ el.textContent = val || ''; }
 
   async function load(){
-    const id  = qs('id');
-    const src = qs('src');
+    const id = qs('id');
+    const maybeSrc = qs('src'); // if someone manually adds it, we only show a button, no embedding.
 
-    const head = document.getElementById('matchHeader');
-    const meta = document.getElementById('meta');
-    const player = document.getElementById('player');
-    const compBadge = document.getElementById('compBadge');
-    const fallbackMsg = document.getElementById('fallbackMsg');
-
-    // 1) Render player immediately if src is present
-    if (src) {
-      if (isVideoUrl(src)) {
-        player.innerHTML = `<video controls playsinline autoplay><source src="${src}">Your browser does not support the video tag.</video>`;
-      } else {
-        player.innerHTML = `<iframe src="${src}" allowfullscreen loading="lazy" referrerpolicy="no-referrer"></iframe>`;
-      }
-    } else {
-      fallbackMsg.style.display = 'block';
+    if (maybeSrc){
+      const a = document.getElementById('extLink');
+      a.href = maybeSrc;
+      document.getElementById('extLinkWrap').style.display = 'block';
     }
 
-    // 2) If we have an id, hydrate match info; else just show a generic title
-    if (!id) {
-      head.innerHTML = '<div class="h1">Live stream</div>';
+    if (!id){
+      document.getElementById('statusLine').textContent = 'Missing match id';
       return;
     }
 
-    try {
+    try{
       const r = await fetch('/api/fixture/' + encodeURIComponent(id));
       const j = await r.json();
       const fx = j.fixture || j || {};
+
       const homeName = fx.home?.name || 'Home';
       const awayName = fx.away?.name || 'Away';
       const homeLogo = fx.home?.logo || '';
@@ -92,17 +94,17 @@
       const status   = fx.status || 'SCHEDULED';
       const kickoff  = fx.start_utc || '';
 
-      compBadge.textContent = league || '';
-      head.innerHTML = `
-        <div class="mc-logos">${homeLogo ? `<img src="${homeLogo}" alt="${homeName} logo" />` : ''}</div>
-        <div><div class="h1">${homeName} <span class="vs">vs</span> ${awayName}</div><div class="muted">${status}</div></div>
-        <div class="mc-logos">${awayLogo ? `<img src="${awayLogo}" alt="${awayName} logo" />` : ''}</div>`;
-      meta.innerHTML = `
-        <div><span class="muted small">Kickoff</span><div>${kickoff ? new Date(kickoff).toLocaleString() : '-'}</div></div>
-        <div><span class="muted small">Competition</span><div>${league || '-'}</div></div>
-        <div><span class="muted small">Status</span><div>${status || '-'}</div></div>`;
-    } catch(e) {
-      head.innerHTML = '<div class="h1">Live stream</div>';
+      set(document.getElementById('homeName'), homeName);
+      set(document.getElementById('awayName'), awayName);
+      document.getElementById('homeLogo').src = homeLogo || '/logo.svg';
+      document.getElementById('awayLogo').src = awayLogo || '/logo.svg';
+      set(document.getElementById('leagueBadge'), league);
+      set(document.getElementById('league'), league);
+      set(document.getElementById('state'), status);
+      set(document.getElementById('kickoff'), kickoff ? new Date(kickoff).toLocaleString() : '-');
+      set(document.getElementById('statusLine'), status);
+    }catch(e){
+      set(document.getElementById('statusLine'), 'Could not load match data.');
     }
   }
   load();
