--- a/public/watch.html
+++ b/public/watch.html
@@ -92,7 +92,7 @@
   <div class="headerbar">
     <a class="btn" href="/" aria-label="Back to schedule">← Back</a><div class="center"></div>
     <span id="leagueBadge" class="badge"></span>
-<button id="showStream" class="btn" type="button">Show Stream</button>
+
   </div>
 
   <div class="teams">
@@ -118,11 +118,11 @@
   </section>
 
   <div style="text-align:center; margin-top:8px;">
-  <button id="openServer1" class="btn" type="button">Server 1</button>
+  <div id="serverBar" class="serverbar"></div>
+
+  
 </div>
-<div id="extLinkWrap" style="display:none;text-align:center">
-    <a id="extLink" class="btn" target="_blank" rel="noopener">Open external stream ↗</a>
-  </div>
+
 </main>
 
 <script>
