--- a/public/watch.html
+++ b/public/watch.html
@@ -43,7 +43,10 @@
     @keyframes pulse{0%,100%{transform:translate(-50%,-50%) scale(.85);opacity:.85}50%{transform:translate(-50%,-50%) scale(1.12);opacity:1}}
     /* Hide league badge on narrow screens; full league is in meta */
     @media(max-width:600px){ #leagueBadge{display:none} }
-  </style>
+  
+  .chip{display:inline-block;padding:4px 10px;border:1px solid #2a2f37;border-radius:999px;font-size:12px}
+</style>
+
 </head>
 <body>
 <header class="header">
@@ -71,6 +74,7 @@
     <div class="side away"><img id="awayLogo" alt="" width="64" height="64" loading="lazy"/><span class="teamName" id="awayName"></span></div>
   </div>
   <div class="muted statusBig" id="statusLine" style="text-align:center"></div>
+<div style="text-align:center;margin-top:4px;"><span id="minuteChip" class="chip" style="display:none"></span></div>
 
   <div class="meta">
     <div><span class="muted small">Kickoff</span><div id="kickoff">-</div></div>
@@ -174,6 +178,7 @@
   }
 
   function applyFixture(fx){
+    window.__lastFixture = fx;
     const homeName = fx.home?.name || 'Home';
     const awayName = fx.away?.name || 'Away';
     const homeLogo = fx.home?.logo || '';
@@ -192,6 +197,7 @@
     $('statusLine').textContent = normalizeStatus(fx);
 
     renderServerButtonsFromFixture(fx);
+    try{ updateMinuteChip(fx); }catch{}
     hideLoading();
   }
 
@@ -200,7 +206,7 @@
     __loadFailTimer = setTimeout(hideLoading, 3000);
 
     const id  = qs('id');
-    if (!id){ $('statusLine').textContent='Missing match id'; hideLoading(); return; }
+    if (!id){ $('statusLine').textContent = normalizeStatus(fx); hideLoading(); return; }
 
     // Try server lookup quickly; if slow, do client-side scan
     async function serverResolve(){ try{ const r = await fetch('/api/fixture/' + encodeURIComponent(id)); if (r.ok){ const j = await r.json(); return j.fixture || null; } }catch{} return null; }
@@ -220,9 +226,34 @@
 
     const [s,c] = await Promise.allSettled([serverResolve(), clientResolve()]);
     const fx = (s.status==='fulfilled' && s.value) || (c.status==='fulfilled' && c.value) || null;
-    if (fx){ applyFixture(fx); } else { $('statusLine').textContent='Could not load match data.'; hideLoading(); }
+    if (fx){ applyFixture(fx); } else { $('statusLine').textContent = normalizeStatus(fx); hideLoading(); }
   }
   load();
+
+  function updateMinuteChip(fx){
+    const chip = $('minuteChip'); if (!chip) return;
+    const txt = minuteDisplay(fx);
+    if (txt){ chip.textContent = txt; chip.style.display = 'inline-block'; }
+    else { chip.style.display = 'none'; }
+  }
+
+<script>
+  async function refreshStatus(){
+    try{
+      const id = new URLSearchParams(location.search).get('id') || '';
+      if (!id) return;
+      const r = await fetch('/api/fixture/' + encodeURIComponent(id));
+      if (!r.ok) return;
+      const j = await r.json();
+      const fx = j.fixture || null;
+      if (!fx) return;
+      // Only update the status/minute fields to avoid flicker
+      $('state').textContent = normalizeStatus(fx);
+      $('statusLine').textContent = normalizeStatus(fx);
+      updateMinuteChip(fx);
+    }catch(e){/* ignore */}
+  }
+  setInterval(refreshStatus, 60000);
 </script>
 </body>
 </html>
